// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with title 1`] = `
.emotion-1 {
  margin-top: 1rem;
  padding-bottom: 0.5rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-0 {
  display: inline-block;
  margin: 0 2rem 0 0;
  font-size: 1.25rem;
  line-height: 1.5625rem;
  font-weight: 700;
}

@media (min-width:31.25em) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.4375rem;
  }
}

<header
  className="emotion-1"
>
  <h1
    className="emotion-0"
  >
    Page Title
  </h1>
</header>
`;

exports[`Header renders correctly with title and back button 1`] = `
.emotion-4 {
  margin-top: 1rem;
  padding-bottom: 0.5rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-3 {
  display: inline-block;
  margin: 0 2rem 0 0;
  font-size: 1.25rem;
  line-height: 1.5625rem;
  font-weight: 700;
}

@media (min-width:31.25em) {
  .emotion-3 {
    font-size: 2rem;
    line-height: 2.4375rem;
  }
}

.emotion-2 {
  margin: 0 1rem 0 0;
  padding: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  vertical-align: middle;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.emotion-0 {
  vertical-align: middle;
}

.emotion-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<header
  className="emotion-4"
>
  <a
    className="emotion-2"
    href="../"
  >
    <svg
      className="emotion-0"
      color="#0CD664"
      fontSize="1.5rem"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 0 0-1.42-1.42l-5 5a1.014 1.014 0 0 0 0 1.42l5 5a1.003 1.003 0 0 0 1.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="emotion-1"
    >
      Back to Cashier
    </span>
  </a>
  <h1
    className="emotion-3"
  >
    Page Title
  </h1>
</header>
`;
